[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
cached = "0.54.0"
indexmap = "2.7.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
nom = "7.1.3"
once_cell = "1.20.2"
petgraph = "0.6.5"
regex = "1.11.1"
